--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,10 @@ script:
 - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 - docker build -t beckonconn/arm-bind .
 - docker run beckonconn/arm-bind named --version
+after_sucess:
+->
+  if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+    docker login -u $dockerUser -p $dockerPass
+    docker tag beckonconn/rpi-bind beckonconn/rpi-bind:$TRAVIS_COMMIT
+    docker push beckonconn/rpi-bind:$TRAVIS_COMMIT
+   fi
