Figuring out how to push to docker hub after successful build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ script:
 - docker run --rm --privileged multiarch/qemu-user-static:register --reset
 - docker build -t beckonconn/rpi-bind .
 - docker run beckonconn/rpi-bind named -v
-after_sucess:
 - >
-  if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+  if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TEST_RESULT" == 0 ]; then
     docker login -u $dockerUser -p $dockerPass
     docker tag beckonconn/rpi-bind beckonconn/rpi-bind:$TRAVIS_COMMIT
     docker push beckonconn/rpi-bind:$TRAVIS_COMMIT
-   fi
+    docker push beckonconn/rpi-bind
+  fi
